--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Análises de Amor - Otavio e Sophia</title>
    <link rel="stylesheet" href="style.css">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Diphylleia&family=Single+Day&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
    <script src="script.js" defer></script>
 </head>
 
@@ -70,17 +66,17 @@
                   </div>
                </li>
                <li class="category talked-more">
-                  <h3><i class="fas fa-calendar-alt"></i> Quando falamos mais?</h3>
+                  <h3><i class="fas fa-calendar-alt"></i> Quando conversamos mais?</h3>
                   <div class="leaderboard-item">
                      <div class="item-content">
-                        <p>Sabia que o dia em que mais falamos é na <span class="weekday"><span class="result">---</span></span>? 😯</p>
-                        <p>E o mês em que mais falamos foi em <span class="month"><span class="result">---</span></span> 😳</p>
-                        <p>Assim como a hora em que falamos mais durante <span class="period">---</span> é às <span class="hour"><span class="result">---</span></span> 😚</p>
+                        <p>Sabia que o dia em que mais conversamos é na <span class="weekday"><span class="result">---</span></span>? 😯</p>
+                        <p>E o mês em que mais conversamos foi em <span class="month"><span class="result">---</span></span> 😳</p>
+                        <p>Assim como a hora em que conversamos mais durante <span class="period">---</span> é às <span class="hour"><span class="result">---</span></span> 😚</p>
                      </div>
                   </div>
                </li>
                <li class="category who-talked-more">
-                  <h3><i class="fas fa-comment-dots"></i> E... quem fala mais?</h3>
+                  <h3><i class="fas fa-comment-dots"></i> E... quem conversa mais?</h3>
                   <div class="leaderboard-item">
                      <div class="item-content">
                         <p>Você enviou um total de <span class="otavio-messages"><span class="result">0</span></span> mensagens.</p>
@@ -90,11 +86,19 @@
                   </div>
                </li>
                <li class="category average-messages">
-                  <h3><i class="fas fa-chart-line"></i> E por dia nos enviamos...</h3>
+                  <h3><i class="fas fa-chart-line"></i> E por dia, nos enviamos...</h3>
                   <div class="leaderboard-item">
                      <div class="item-content">
                         <p>Sabia que... em média enviamos <span class="total"><span class="result">0</span></span> mensagens por dia.</p>
                         <p>Onde você envia <span class="otavio"><span class="result">0</span></span> mensagens e eu envio <span class="sophia"><span class="result">0</span></span> mensagens em média por dia.</p>
+                     </div>
+                  </div>
+               </li>
+               <li class="category weekly-hours">
+                  <h3><i class="fas fa-clock"></i> E nesta semana, quantas horas conversamos?</h3>
+                  <div class="leaderboard-item">
+                     <div class="item-content">
+                        <canvas id="timeMetricsChart"></canvas>
                      </div>
                   </div>
                </li>
