--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                      <div class="item-content">
                         <p>Você enviou um total de <span class="otavio-messages"><span class="result">0</span></span> mensagens.</p>
                         <p>Eu enviei um total de <span class="sophia-messages"><span class="result">0</span></span> mensagens.</p>
-                        <p>E o vencedor(a) é... <span class="winner"><span class="result">---</span></span></p>
+                        <p><span class="winner"><span class="result">---</span></span></p>
                      </div>
                   </div>
                </li>
