--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 
 <body>
    <div class="container">
+      <div class="loading-overlay">
+         <div class="loading-message">
+            <div class="loading-icon">
+               <i class="fas fa-spinner fa-spin"></i>
+            </div>
+            <p>Carregando...</p>
+         </div>
+      </div>
       <header>
          <nav>
             <div class="logo">
