--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <main>
          <section class="hero">
             <h1>Nosso Amor em Números</h1>
-            <p>Olá Otávio! Criei esta página para te apresentar alguns dados que obtive da nossa API. Essa aplicação analisa nossas conversas no Discord. Compilei algumas mensagens que considero especiais e outros dados interessantes. Espero que você goste.</p>
+            <p>Olá Otavio! Criei esta página para te apresentar alguns dados que obtive da nossa API. Essa aplicação analisa nossas conversas no Discord. Compilei algumas mensagens que considero especiais e outros dados interessantes. Espero que você goste.</p>
          </section>
 
          <div class="leaderboard">
@@ -117,6 +117,7 @@
          <p>&copy; 2024 Análises de Amor - Otavio e Sophia. Todos os direitos reservados.</p>
       </footer>
    </div>
+   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
    <script src="script.js" defer></script>
 </body>
 
